@@ -1,5 +1,14 @@
 2004-01-17  Jorn Baayen  <jorn@nl.linux.org>
 
+	* src/AddSongWindow.cs:
+	* src/Album.cs:
+	* src/PlaylistWindow.cs:
+	* src/Song.cs:
+
+	Optimizations.
+
+2004-01-17  Jorn Baayen  <jorn@nl.linux.org>
+
 	* data/glade/AddWindow.glade:
 	* data/glade/ErrorDialog.glade:
 	* data/glade/Makefile.am:
